--- a/students.html
+++ b/students.html
@@ -50,7 +50,7 @@
 		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student</li>
 	</ul>
 	<ul>
-		<li> <a href="">Eric Chapdelaine</a>, NEU UG</li>
+
 	</ul>
 
 <h4>Alumni</h4>
@@ -64,6 +64,7 @@
 		<li> <a href="http://albertcheu.com/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University &rarr; Research Scientist at Google  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
 	<ul>
+		<li> <a href="">Eric Chapdelaine</a>, NEU UG, 2023&ndash;2024</li>
 		<li> <a href="https://stanley-wu.com/">Stanley Wu</a>, NEU UG, 2021&ndash;2023 &rarr; PhD student at University of Chicago <span id="date">NSF GRFP Winner</span>
 		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, NEU UG 2021
 		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, NEU UG 2018&ndash;2019 &rarr; PhD student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
