--- a/research.html
+++ b/research.html
@@ -45,14 +45,6 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
-	<strong>How to Make the Gradients Small Privately: Improved Rates for Differentially Private Non-Convex Optimization</strong>
-	<a href="https://arxiv.org/abs/2402.11173"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://sites.google.com/view/andrewlowy">Andrew Lowy</a>,
-	Jonathan Ullman, and
-	<a href="https://pages.cs.wisc.edu/~swright/">Stephen Wright</a>
-</div>
-
-<div class="paper">
 	<strong>Metalearning with Very Few Samples Per Task</strong>
 	<a href="https://arxiv.org/abs/2312.13978"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,
@@ -92,6 +84,15 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>How to Make the Gradients Small Privately: Improved Rates for Differentially Private Non-Convex Optimization</strong>
+	<a href="https://arxiv.org/abs/2402.11173"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://sites.google.com/view/andrewlowy">Andrew Lowy</a>,
+	Jonathan Ullman, and
+	<a href="https://pages.cs.wisc.edu/~swright/">Stephen Wright</a><br/>
+	International Conference on Machine Learning <strong>(ICML '24)</strong><br/>
+</div>
 
 <div class="paper">
 	<strong>Program Analysis for Adaptive Data Analysis</strong>
