--- a/research.html
+++ b/research.html
@@ -117,7 +117,7 @@
 
 <div class="paper">
 	<strong>Chameleon: Increasing Label-Only Membership Leakage with Adaptive Poisoning</strong>
-	<a href="https://arxiv.org/abs/2310.03838"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://arxiv.org/abs/2310.03838"><span id="label-preprint">arXiv</span></a> <a href="https://github.com/harshch1803/CHAMELEON"><span id="label-code">GitHub</span></a> <a href="https://iclr.cc/virtual/2024/poster/19475"><span id="label-talk">Video</span></a><br/>
 	<a href="https://harshch1803.github.io/">Harsh Chaudhuri</a>,	
 	<a href="https://severi.xyz/">Giorgio Severi</a>, 
 	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
@@ -697,7 +697,7 @@ ACM Symposium on Theory of Computing <strong>(STOC'12)</strong><br/>
 <strong>PCPs and the Hardness of Generating Private Synthetic Data</strong>
 <a href="http://eccc.hpi-web.de/report/2010/017/"><span id="label-preprint">ECCC</span></a><br/>
 Jonathan Ullman and
-<a href="http://people.seas.harvard.edu/~salil">Salil Vadhan</a>
+<a href="http://people.seas.harvard.edu/~salil">Salil Vadhan</a><br/>
 IACR Theory of Cryptography Conference <strong>(TCC'11)</strong><br/>
 <span id="date">Invited to the Journal of Cryptology</span><br/>
 
