--- a/research.html
+++ b/research.html
@@ -45,24 +45,6 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
-	<strong>Metalearning with Very Few Samples Per Task</strong>
-	<a href="https://arxiv.org/abs/2312.13978"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,
-	<a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a>,	
-	<a href="https://cs-people.bu.edu/grbrown/">Gavin Brown</a>, 
-	<a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, and
-	Jonathan Ullman
-</div>
-
-<div class="paper">
-	<strong>Smooth Lower Bounds for Differentially Private Algorithms via Padding-and-Permuting Fingerprinting Codes</strong>
-	<a href="https://arxiv.org/abs/2307.07604"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="">Naty Peter</a>,	
-	<a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a>, and
-	Jonathan Ullman
-</div>
-
-<div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
 	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
@@ -84,6 +66,26 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>Metalearning with Very Few Samples Per Task</strong>
+	<a href="https://arxiv.org/abs/2312.13978"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,
+	<a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a>,	
+	<a href="https://cs-people.bu.edu/grbrown/">Gavin Brown</a>, 
+	<a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, and
+	Jonathan Ullman<br/>
+	Conference on Learning Theory <strong>(COLT '24)</strong><br/>
+</div>
+
+<div class="paper">
+	<strong>Smooth Lower Bounds for Differentially Private Algorithms via Padding-and-Permuting Fingerprinting Codes</strong>
+	<a href="https://arxiv.org/abs/2307.07604"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="">Naty Peter</a>,	
+	<a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a>, and
+	Jonathan Ullman <br/>
+	Conference on Learning Theory <strong>(COLT '24)</strong><br/>
+</div>
 
 <div class="paper">
 	<strong>How to Make the Gradients Small Privately: Improved Rates for Differentially Private Non-Convex Optimization</strong>
