--- a/research.html
+++ b/research.html
@@ -45,6 +45,17 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Private Mean Estimation with Person-Level Differential Privacy</strong>
+	<a href="https://arxiv.org/abs/2405.20405"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://sushaga.github.io/">Sushant Agarwal</a>,
+	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
+	<a href="https://www.mahbodmajid.com/">Mahbod Majid</a>, 
+	<a href="https://argymouz.github.io/">Argyris Mouzakis</a>, 
+	<a href="https://rosesilver.github.io/">Rose Slver</a>, 
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
 	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
