--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">06-05-2024</span> New <a href="https://arxiv.org/abs/2405.20405">paper</a> on person-level differentially private estimation!
 		<li><span id="date">05-08-2024</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> and <a href="https://maryamaliakbarpour.com/">Maryam</a> on their COLT <a href="https://arxiv.org/abs/2312.13978">paper</a>!
 		<li><span id="date">04-15-2024</span> So excited that I got to put a <a href="img/jon-lydia-hooding.jpg">hood</a> on <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia</a>!
 		<li><span id="date">04-15-2024</span> Congratulations to my former PhD student <a href="http://albertcheu.com/">Albert</a> on his new job as a Research Scientist at Google!
