--- a/research.html
+++ b/research.html
@@ -45,6 +45,14 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Private Geometric Median</strong>
+	<a href="https://arxiv.org/abs/2406.07407"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://mhaghifam.github.io/mahdihaghifam//">Mahdi Haghifam</a>,
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>Private Mean Estimation with Person-Level Differential Privacy</strong>
 	<a href="https://arxiv.org/abs/2405.20405"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://sushaga.github.io/">Sushant Agarwal</a>,
