--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">06-12-2024</span> New <a href="https://arxiv.org/abs/2406.07407">paper</a> on private geometric median!
 		<li><span id="date">06-05-2024</span> New <a href="https://arxiv.org/abs/2405.20405">paper</a> on person-level differentially private estimation!
 		<li><span id="date">05-08-2024</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> and <a href="https://maryamaliakbarpour.com/">Maryam</a> on their COLT <a href="https://arxiv.org/abs/2312.13978">paper</a>!
 		<li><span id="date">04-15-2024</span> So excited that I got to put a <a href="img/jon-lydia-hooding.jpg">hood</a> on <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia</a>!
@@ -79,8 +80,6 @@
 		<li><span id="date">11-08-2023</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her ITCS <a href="https://arxiv.org/abs/2305.13440">paper</a>!
 		<li><span id="date">10-09-2023</span> New <a href="https://arxiv.org/abs/2310.03838">paper</a> on label-only membership inference.
 		<li><span id="date">07-18-2023</span> New <a href="https://arxiv.org/abs/2307.07604">paper</a> on lower bounds for DP clustering and subspace estimation.
-		<li><span id="date">07-07-2023</span> Welcome to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, our new Khoury Distinguished Postdoctoral Fellow!</li>
-		<li><span id="date">07-05-2023</span> Congratulations to <a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia</a> on her thesis defense!  Good luck in your postdoc at UC Berkeley!</li>
 	</ul></div>
 
 	<h4>
