--- a/service.html
+++ b/service.html
@@ -55,27 +55,33 @@
 
 <h4> Program Committee Member / Area Chair </h4>
 <ul>
-	<li> Conference on Learning Theory (COLT): 2023, 2024</li>
-	<li> ACM Conference on Fairness, Accountability, and Transparency (FAccT): 2022</li>
-	<li> AAAI Conference on Artificial Intelligence (AAAI): 2022</li>
-	<li> IEEE Symposium on Security &amp; Privacy (S&amp;P): 2020, 2021</li>
-	<li> ACM Conference on Computer and Information Security (CCS): 2020</li>
-	<li> Information Theoretic Cryptography Conference (ITC): 2020</li>
-	<li> IEEE Symposium on Foundations of Computer Science (FOCS): 2018</li>
-	<li> SIAM Symposium on Discrete Algorithms (SODA): 2018, 2024</li>
- 	<li> ACM Conference on Economics and Computation (EC): 2016</li>
-	<li> Theory of Cryptography Conference (TCC): 2015, 2016</li>
-	<li> ACM Symposium on Theory of Computing (STOC): 2015</li>
-	<li> ACM Innovations in Theoretical Computer Science (ITCS): 2015</li>
+	<li> ACM Symposium on Theory of Computing (STOC) 2025</li>
+	<li> Foundations of Responsible Computing (FORC) 2024</li>
+	<li> SIAM Symposium on Discrete Algorithms (SODA) 2024</li>
+	<li> Conference on Learning Theory (COLT) 2024</li>
+	<li> Conference on Learning Theory (COLT) 2023</li>
+	<li> ACM Conference on Fairness, Accountability, and Transparency (FAccT) 2022</li>
+	<li> AAAI Conference on Artificial Intelligence (AAAI) 2022</li>
+	<li> IEEE Symposium on Security &amp; Privacy (S&amp;P) 2021</li>
+	<li> IEEE Symposium on Security &amp; Privacy (S&amp;P) 2020</li>
+	<li> ACM Conference on Computer and Information Security (CCS) 2020</li>
+	<li> Information Theoretic Cryptography Conference (ITC) 2020</li>
+	<li> IEEE Symposium on Foundations of Computer Science (FOCS) 2018</li>
+	<li> SIAM Symposium on Discrete Algorithms (SODA) 2018</li>
+	<li> Theory of Cryptography Conference (TCC) 2016</li>
+ 	<li> ACM Conference on Economics and Computation (EC) 2016</li>
+	<li> ACM Symposium on Theory of Computing (STOC) 2015</li>
+	<li> Theory of Cryptography Conference (TCC) 2015</li>
+	<li> ACM Innovations in Theoretical Computer Science (ITCS) 2015</li>
 </ul>
 
-<h4> Reviewer </h4>
+<!--<h4> Reviewer </h4>
 <ul>
 	<li>Conference on Learning Theory (COLT): 2020</li>
 	<li>International Conference on Machine Learning (ICML): 2018, 2020</li>
 	<li>International Conference on Artificial Intelligence and Statistics (AISTATS): 2017</li>
 	<li>Conference on Neural and Information Processing Systems (NeurIPS): 2016, 2017</li>
-</ul>
+</ul>-->
 </div>
 
    
