--- a/nsf-auditing.html
+++ b/nsf-auditing.html
@@ -25,7 +25,7 @@
 
 <div>
 	
-<h2>SaTC: CORE: Small: Auditing Private Statistical and Machine Learning Algorithms: Theory and Practice</h2>	
+<h2>CNS-2247484 SaTC: CORE: Small: Auditing Private Statistical and Machine Learning Algorithms: Theory and Practice</h2>	
 	
 <h4>Project Abstract</h4>
 	
@@ -38,6 +38,12 @@
 <ul>
 	<li><a href="https://www.khoury.northeastern.edu/home/alina/">Alina Oprea</a>, Northeastern University, PI</li>
 	<li><a href="https://jonathan-ullman.github.io/">Jonathan Ullman</a>, Northeastern University, PI</li>
+	<li><a href="">John Abascal</a>, Northeastern University, PhD Student</li>
+	<li><a href="">Harsh Chaudhari</a>, Northeastern University, PhD Student</li>
+	<li><a href="">Lisa Oakley</a>, Northeastern University, PhD Student</li>
+	<li><a href="">Giorgio Severi</a>, Northeastern University, PhD Student</li>
+	<li><a href="">Nico Berrios</a>, Catholic University of Chile, Undergraduate</li>
+	<li><a href="">Stanley Wu</a>, Northeastern University, Undergraduate (now a PhD student at University of Chicago)</li>
 </ul>
 
 <h4>Publications</h4>
@@ -79,7 +85,7 @@
 	<a href="https://harshch1803.github.io/">Lisa Oakley</a>,	
 	<a href="https://severi.xyz/">Steven Holtzen</a>, and
 	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a><br/>
-	IEEE Computer Security Foundations Symposium <strong>(CSF '23)</strong><br/>
+	IEEE Computer Security Foundations Symposium <strong>(CSF '24)</strong><br/>
 </div>
 
 </div>       
