--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 
 <div>
 	<h4>About Me</h4>
+	
+		<p><strong>I'll be moving to University of Michigan CSE in Fall 2025!</strong></p>
       
-	  <p>My research centers on the foundations of privacy for machine learning and statistics, in particular differential privacy and its surprising interplay with other topics such as statistical validity, robustness, cryptography, and fairness. My background is in theoretical computer science, but increasingly my work spans machine learning, statistics, cryptography, and cybersecurity.  My research and teaching have been recognized with an NSF CAREER award and the Ruth and Joel Spira Outstanding Teaching Award.
+	  <p>My research centers on the foundations of privacy for machine learning and statistics, in particular differential privacy and its surprising interplay with other topics such as statistical validity, robustness, cryptography, and fairness. My background is in theoretical computer science, but increasingly my work spans machine learning, statistics, cryptography, and cybersecurity.  My research and teaching have been recognized with an NSF CAREER award and the Ruth and Joel Spira Outstanding Teaching Award.</p>
 
 		<p>At Northeastern, I am a member of the <a href="https://www2.ccs.neu.edu/theory/">Theory Group</a>, the <a href="https://neucrypt.github.io">Cryptography and Privacy Group</a> and the <a href="https://cyber.khoury.northeastern.edu/">Cybersecurity & Privacy Institute</a>.  I am also a member of the <a href="https://bostondataprivacy.github.io">Boston-Area Data Privacy Group</a></p>
 			
