--- a/service.html
+++ b/service.html
@@ -75,6 +75,11 @@
 	<li> ACM Innovations in Theoretical Computer Science (ITCS) 2015</li>
 </ul>
 
+<h4> Editorial </h4>
+<ul>
+	<li>I'm an action editor for <a href="https://jmlr.org/tmlr/">Transactions on Machine Learning Research</a></li>
+</ul>
+
 <!--<h4> Reviewer </h4>
 <ul>
 	<li>Conference on Learning Theory (COLT): 2020</li>
