--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
 	
 <h2>Teaching</h2>
 	
-<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  I have teaching release for Spring 2024.  You can see what courses I've taught in the past below.</p>
+<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  For Fall 2024, I am teaching CS3000: Algorithms &amp; Data.  You can see what courses I've taught in the past below.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
