--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div>
 	<h4>About Me</h4>
 	
-		<p><strong>I'll be moving to University of Michigan CSE in Fall 2025!</strong></p>
+		<p><strong><font color=#ED7D31>I'll be moving to University of Michigan CSE in Fall 2025!</font></strong></p>
       
 	  <p>My research centers on the foundations of privacy for machine learning and statistics, in particular differential privacy and its surprising interplay with other topics such as statistical validity, robustness, cryptography, and fairness. My background is in theoretical computer science, but increasingly my work spans machine learning, statistics, cryptography, and cybersecurity.  My research and teaching have been recognized with an NSF CAREER award and the Ruth and Joel Spira Outstanding Teaching Award.</p>
 
@@ -92,7 +92,7 @@
 		<li> <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, Postdoc</li>
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
-		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student</li>
+		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student at CMU, co-advised with Elaine Shi</li>
 	</ul></p>
 
 </div>
