--- a/students.html
+++ b/students.html
@@ -47,7 +47,7 @@
 	<ul>
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
-		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student</li>
+		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student at CMU, co-advised with Elaine Shi</li>
 	</ul>
 	<ul>
 
@@ -55,7 +55,7 @@
 
 <h4>Alumni</h4>
 	<ul>
-		<li> <a href="http://www.mit.edu/~maryama/"> Maryam Aliakbarpour</a>, Postdoc 2021&ndash;2023 &rarr; Assistant Professor at Rice University
+		<li> <a href="http://www.mit.edu/~maryama/"> Maryam Aliakbarpour</a>, Postdoc 2021&ndash;2023 &rarr; Faculty at Rice University
 		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc 2018&ndash;2020 &rarr; Research Scientist at Apple
 	</ul>
 	<ul>
