--- a/research.html
+++ b/research.html
@@ -45,14 +45,6 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
-	<strong>Private Geometric Median</strong>
-	<a href="https://arxiv.org/abs/2406.07407"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://mhaghifam.github.io/mahdihaghifam//">Mahdi Haghifam</a>,
-	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>
-	Jonathan Ullman
-</div>
-
-<div class="paper">
 	<strong>Private Mean Estimation with Person-Level Differential Privacy</strong>
 	<a href="https://arxiv.org/abs/2405.20405"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://sushaga.github.io/">Sushant Agarwal</a>,
@@ -85,6 +77,15 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>Private Geometric Median</strong>
+	<a href="https://arxiv.org/abs/2406.07407"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://mhaghifam.github.io/mahdihaghifam//">Mahdi Haghifam</a>,
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>
+	Jonathan Ullman<br/>
+	Conference on Neural and Information Processing Systems <strong>(NeurIPS '24)</strong><br/>
+</div>
 
 <div class="paper">
 	<strong>Metalearning with Very Few Samples Per Task</strong>
