--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">09-26-2024</span> Congratulations to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> on his NeurIPS <a href="https://arxiv.org/abs/2406.07407">paper</a>
 		<li><span id="date">06-12-2024</span> New <a href="https://arxiv.org/abs/2406.07407">paper</a> on private geometric median!
 		<li><span id="date">06-05-2024</span> New <a href="https://arxiv.org/abs/2405.20405">paper</a> on person-level differentially private estimation!
 		<li><span id="date">05-08-2024</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> and <a href="https://maryamaliakbarpour.com/">Maryam</a> on their COLT <a href="https://arxiv.org/abs/2312.13978">paper</a>!
