--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">10-04-2024</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her SODA <a href="https://arxiv.org/abs/2405.20405">paper</a>
 		<li><span id="date">09-26-2024</span> Congratulations to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> on his NeurIPS <a href="https://arxiv.org/abs/2406.07407">paper</a>
 		<li><span id="date">06-12-2024</span> New <a href="https://arxiv.org/abs/2406.07407">paper</a> on private geometric median!
 		<li><span id="date">06-05-2024</span> New <a href="https://arxiv.org/abs/2405.20405">paper</a> on person-level differentially private estimation!
@@ -81,8 +82,6 @@
 		<li><span id="date">02-01-2024</span> Congratulations to <a href="http://www.johnabascal.com/">John</a> and <a href="https://stanley-wu.com/">Stanley</a> on their PETS <a href="https://arxiv.org/abs/2306.01181">paper</a>!
 		<li><span id="date">12-28-2023</span> New <a href="https://arxiv.org/abs/2312.13978">paper</a> on metalearning!
 		<li><span id="date">11-08-2023</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her ITCS <a href="https://arxiv.org/abs/2305.13440">paper</a>!
-		<li><span id="date">10-09-2023</span> New <a href="https://arxiv.org/abs/2310.03838">paper</a> on label-only membership inference.
-		<li><span id="date">07-18-2023</span> New <a href="https://arxiv.org/abs/2307.07604">paper</a> on lower bounds for DP clustering and subspace estimation.
 	</ul></div>
 
 	<h4>
