--- a/service.html
+++ b/service.html
@@ -49,30 +49,27 @@
 
 <h4> Program Committee Chair / Track Chair </h4>
 <ul>
-	<li> Privacy and Anonymity Track Chair, ACM Conference on Computer and Information Security (CCS) 2021</li>
-	<li> Workshop Chair</strong>, Workshop on Theory and Practice of Differential Privacy (TPDP) 2017</li>
+	<li> Privacy and Anonymity Track Chair, ACM Conference on Computer and Information Security <strong>(CCS)</strong> 2021</li>
+	<li> Workshop Chair</strong>, Workshop on Theory and Practice of Differential Privacy <strong>(TPDP)</strong> 2017</li>
 </ul>
 
-<h4> Program Committee Member / Area Chair </h4>
+<h4> Program Committee Member / Area Chair (Grouped by Conference) </h4>
 <ul>
-	<li> ACM Symposium on Theory of Computing (STOC) 2025</li>
-	<li> Foundations of Responsible Computing (FORC) 2024</li>
-	<li> SIAM Symposium on Discrete Algorithms (SODA) 2024</li>
-	<li> Conference on Learning Theory (COLT) 2024</li>
-	<li> Conference on Learning Theory (COLT) 2023</li>
-	<li> ACM Conference on Fairness, Accountability, and Transparency (FAccT) 2022</li>
-	<li> AAAI Conference on Artificial Intelligence (AAAI) 2022</li>
-	<li> IEEE Symposium on Security &amp; Privacy (S&amp;P) 2021</li>
-	<li> IEEE Symposium on Security &amp; Privacy (S&amp;P) 2020</li>
-	<li> ACM Conference on Computer and Information Security (CCS) 2020</li>
-	<li> Information Theoretic Cryptography Conference (ITC) 2020</li>
-	<li> IEEE Symposium on Foundations of Computer Science (FOCS) 2018</li>
-	<li> SIAM Symposium on Discrete Algorithms (SODA) 2018</li>
-	<li> Theory of Cryptography Conference (TCC) 2016</li>
- 	<li> ACM Conference on Economics and Computation (EC) 2016</li>
-	<li> ACM Symposium on Theory of Computing (STOC) 2015</li>
-	<li> Theory of Cryptography Conference (TCC) 2015</li>
-	<li> ACM Innovations in Theoretical Computer Science (ITCS) 2015</li>
+	<li> Senior PC Member, Conference on Learning Theory <strong>(COLT)</strong>: 2025</li>
+	<li> Senior Area Chair, International Conference on Machine Learning <strong>(ICML)</strong>: 2025</li>		
+	<li> PC Member, ACM Symposium on Theory of Computing <strong>(STOC)</strong>: 2015, 2025</li>
+	<li> PC Member, Foundations of Responsible Computing <strong>(FORC)</strong>: 2024</li>
+	<li> PC Member, SIAM Symposium on Discrete Algorithms <strong>(SODA)</strong>: 2018, 2024</li>
+	<li> PC Member, Conference on Learning Theory <strong>(COLT)</strong>: 2023, 2024</li>
+	<li> Area Chair, ACM Conference on Fairness, Accountability, and Transparency <strong>(FAccT)</strong>: 2022</li>
+	<li> Area Chair, AAAI Conference on Artificial Intelligence <strong>(AAAI)</strong>: 2022</li>
+	<li> PC Member, IEEE Symposium on Security &amp; Privacy <strong>(IEEE S&amp;P)</strong>: 2020, 2021</li>
+	<li> PC Member, ACM Conference on Computer and Information Security <strong>(CCS)</strong>: 2020</li>
+	<li> PC Member, Information Theoretic Cryptography Conference <strong>(ITC)</strong>: 2020</li>
+	<li> PC Member, IEEE Symposium on Foundations of Computer Science <strong>(FOCS)</strong>: 2018</li>
+	<li> PC Member, Theory of Cryptography Conference <strong>(TCC)</strong>: 2015, 2016</li>
+ 	<li> PC Member, ACM Conference on Economics and Computation <strong>(EC)</strong> 2016</li>
+	<li> PC Member, ACM Innovations in Theoretical Computer Science <strong>(ITCS)</strong> 2015</li>
 </ul>
 
 <h4> Editorial </h4>
