--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">12-10-2024</span> Our <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias-variance tradeoffs in DP was accepted to JASA&mdash;my first stats journal paper!
 		<li><span id="date">11-22-2024</span> We hosted a successful <a href="https://bostondataprivacy.github.io/privacy-day.html">Privacy Day</a> at BU!
 		<li><span id="date">10-04-2024</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her SODA <a href="https://arxiv.org/abs/2405.20405">paper</a>
 		<li><span id="date">09-26-2024</span> Congratulations to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> on his NeurIPS <a href="https://arxiv.org/abs/2406.07407">paper</a>
