--- a/research.html
+++ b/research.html
@@ -45,17 +45,6 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
-	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
-	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
-	<a href="https://argymouz.github.io/">Argyris Mouzakis</a>, 
-	<a href="https://thesalon.github.io/author/matthew-regehr/">Matthew Regehr</a>, 
-	<a href="http://www.ccs.neu.edu/home/vikrantsinghal/">Vikrant Singhal</a>, 
-	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
-	Jonathan Ullman
-</div>
-
-<div class="paper">
 	<strong>Instance-Optimal Differentially Private Estimation</strong>
 	<a href="https://arxiv.org/abs/2210.15819"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://audramarymcmillan.wixsite.com/mysite">Audra McMillan</a>,
@@ -66,6 +55,18 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
+	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
+	<a href="https://argymouz.github.io/">Argyris Mouzakis</a>, 
+	<a href="https://thesalon.github.io/author/matthew-regehr/">Matthew Regehr</a>, 
+	<a href="http://www.ccs.neu.edu/home/vikrantsinghal/">Vikrant Singhal</a>, 
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
+	Jonathan Ullman</br>
+	Journal of the American Statistical Association (to appear)</br>
+</div>
 
 <div class="paper">
 	<strong>Private Mean Estimation with Person-Level Differential Privacy</strong>
