--- a/cs7880-s25/index.html
+++ b/cs7880-s25/index.html
@@ -5,7 +5,7 @@
 <head>
 	
 	<title>
-		CS 7800: Advanced Algorithms
+		CS 7880: Foundations of
 	</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Vollkorn&display=swap">
 	<link rel="stylesheet" href="css/main.css" type="text/css"/>
@@ -27,7 +27,7 @@
 
     <div id="pagetitle"> 
         
-    <div id="name"> <h1>CS 7880: Seminar in TCS</h1> <h3>Foundations of Trustworthy Machine Learning</h3> <h3>Spring 2025</h3>
+    <div id="name"> <h1>CS 7880: Foundations of Trustworthy Machine Learning</h1> <h3>Seminar in Theoretical CS &mdash; Spring 2025</h3>
     </div>
     
     <!--<div id="headerimg"><img src="img/photo.jpg" width="150px"></div>-->
