--- a/cs7880-s25/index.html
+++ b/cs7880-s25/index.html
@@ -38,7 +38,7 @@
 <div>
       <h4>Overview</h4>
       
-      <p>This is an advanced course in algorithms aimed at Ph.D. students in computer science and related fields.  The course surveys fundamental topics like optimization&mdash;greedy algorithms, dynamic programming, network flow, and linear and convex programming&mdash;randomized algorithms, online algorithms, NP-completeness.  The course emphasizes how to reason and communicate rigorously about algorithms.</p>
+      <p>This seminar course will cover recent advances in the theoretical foundations of (trustworthy) machine learning, including but not limited to topics like privacy, fairness, robustness, generalization, safety, and incentives.  The course will consistent primarily of student-led presentations of classic and recent research papers, and will be shaped by students' interests.</p>
       
 			<h4>Time & Location</h4>
 			<p>MTh 11:35 &ndash; 1:15pm in 177 Huntington 6th Floor Conference Room</p>
