--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	<h4>Current Events</h4>
 	<div id="news">
-	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
+	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
 	
 	<ul>
 		<li><span id="date">12-10-2024</span> Our <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias-variance tradeoffs in DP was accepted to JASA&mdash;my first stats journal paper!
