--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
 	
 <h2>Teaching</h2>
 	
-<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  For Fall 2024, I am teaching CS3000: Algorithms &amp; Data.  You can see what courses I've taught in the past below.</p>
+<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  For Spring 2025, I am teaching a seminar course <a href="cs7880-s25/index.html">CS7880: Foundations of Trustworthy Machine Learning</a>.  You can see what courses I've taught in the past below.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
@@ -52,6 +52,7 @@
 			<a href="https://www.ccs.neu.edu/home/jullman/cs7800f15/syllabus.html">Fall 2015</a>
 		</li>
 		<li>CS 3000: Algorithms &amp; Data: 
+			<a href="https://northeastern.instructure.com/courses/187922">Fall 2022</a>,
 			<a href="https://northeastern.instructure.com/courses/152776">Fall 2023</a>,
 			<a href= "https://www.ccs.neu.edu/home/rraj/Courses/3000/F20/www/index.html">Fall 2020</a>, 
 			<a href="https://www.ccs.neu.edu/home/jullman/cs3000s20/syllabus.html">Spring 2020</a>,  
