--- a/cs7880-s25/course-info.html
+++ b/cs7880-s25/course-info.html
@@ -108,7 +108,7 @@
 			<p>Each student will be responsible for leading one or more meetings (depending on the number of students we have).  Before leading a meeting, students are encouraged to 	discuss the paper(s) they will be presenting informally with me and make a plan for how to lead the meeting effectively.
 				
 			<h4>Grading</h4>
-			<p>This is a PhD seminar course with the goal of exposing students to frontier research topics, and to build the skills of reading, discussing, and presenting research papers.  As such, there is no set material you are supposed to come away from the course mastering, and there is no systematic evaluation process.  Any student who attends regularly, participates, and puts effort into the presentations will receive an A.</p>
+			<p>This is a PhD seminar course with the goal of exposing students to frontier research topics, and to build the skills of reading, discussing, and presenting research papers.  As such, there is no set material you are supposed to come away from the course mastering, and there is no systematic evaluation process.  All that is expected is to attends regularly, participate, and put effort into the presentations.</p>
 			
 			<h4>Resources</h4>
 			<p>Since each topic will involve reading a number of classic and recent research papers (possibly with some relevant background material), I will compile a list of relevant papers and other resources here as we go.</p>
