--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
 	
 	<ul>
+		<li><span id="date">12-18-2024</span> New <a href="https://arxiv.org/abs/2412.12374">paper</a> on private personalized learning!
 		<li><span id="date">12-10-2024</span> Our <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias-variance tradeoffs in DP was accepted to JASA&mdash;my first stats journal paper!
 		<li><span id="date">11-22-2024</span> We hosted a successful <a href="https://bostondataprivacy.github.io/privacy-day.html">Privacy Day</a> at BU!
 		<li><span id="date">10-04-2024</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her SODA <a href="https://arxiv.org/abs/2405.20405">paper</a>
@@ -81,7 +82,6 @@
 		<li><span id="date">05-08-2024</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> and <a href="https://maryamaliakbarpour.com/">Maryam</a> on their COLT <a href="https://arxiv.org/abs/2312.13978">paper</a>!
 		<li><span id="date">04-15-2024</span> So excited that I got to put a <a href="img/jon-lydia-hooding.jpg">hood</a> on <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia</a>!
 		<li><span id="date">04-15-2024</span> Congratulations to my former PhD student <a href="http://albertcheu.com/">Albert</a> on his new job as a Research Scientist at Google!
-		<li><span id="date">02-01-2024</span> Congratulations to <a href="http://www.johnabascal.com/">John</a> and <a href="https://stanley-wu.com/">Stanley</a> on their PETS <a href="https://arxiv.org/abs/2306.01181">paper</a>!
 	</ul></div>
 
 	<h4>
