--- a/cs7880-s25/index.html
+++ b/cs7880-s25/index.html
@@ -41,9 +41,9 @@
       <p>This seminar course will cover recent advances in the theoretical foundations of (trustworthy) machine learning, including but not limited to topics like privacy, fairness, robustness, generalization, safety, and incentives.  The course will consistent primarily of student-led presentations of classic and recent research papers, and will be shaped by students' interests.</p>
       
 			<h4>Time & Location</h4>
-			<p>MTh 11:35 &ndash; 1:15pm in 177 Huntington 6th Floor Conference Room</p>
-			<strong>Note 1: This is not the official room assigned by the registrar!</strong></br>
-			<strong>Note 2: 177 Huntington has its own security system, please contact me to gain access</strong>
+			<p>MTh 11:45 &ndash; 1:25pm</br>Behrakis Health Center 750</p>
+			
+			<p><strong><font color=#ED7D31>After the first class we'll move to a location 177 Huntington once we have an idea of the headcount and can get everyone access.  Please go to the room assigned by the registrar on the first day!</font></strong></p>
 			
       <h4>Instructor</h4>
 		    <div id="instructorinfo"> 
