--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -47,23 +47,69 @@
         <th style="width: 600px;">Topic</th>
 				<th style="width: 150px;">Leader</th>
       </tr>
+			<tr>
+				<td colspan=3><center><strong>Unit I &mdash; Privacy</strong></center></td>
+			</tr>
       <tr>
         <td>Mon<br/> 01-06-25</td>
         <td>
-					<strong>Welcome</strong><br/>
+					<strong>Class 01: Intro / Membership Inference</strong><br/>
 					<ul>
-						<li>Welcome</li>
-						<li>Goals for the Course</li>
-						<li>Paper 1 <a href="">[link]</a>
+						<li>Welcome / Introduction
+						<li>Start Membership Inference
+						<li>No assigned reading (obviously), but presentation based on:
+							<ul>
+								<li>Sankararaman, Obozinski, Jordan, Halperin.  <a href="https://www.nature.com/articles/ng.436">Genomic Privacy and Limits of Individual Detection in a Pool</a>. Nature Genetics 2009
+								<li>Dwork, Smith, Steinke, Ullman, Vadhan.  <a href="https://ieeexplore.ieee.org/document/7354420">Robust Traceability from Trace Amounts</a>. FOCS 2015
+							</ul>
 					</ul>
 				</td>
-				<td>Jon Ullman</td>
+				<td>Jon</td>
       </tr>
       <tr>
         <td>Thu<br/> 01-09-25</td>
         <td>
 					<strong>No Meeting (Jon doing "field work")</strong><br/>
 					<ul>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 01-13-25</td>
+        <td>
+					<strong>Class 02: Membership Inference / Differential Privacy</strong><br/>
+					<ul> 
+						<li>Nicholas Carlini, Steve Chien, Milad Nasr, Shuang Song, Andreas Terzis, Florian Tramer.  <a href="https://arxiv.org/abs/2112.03570">Membership Inference Attacks From First Principles</a>.  IEEE S&P 2022.
+						<li>Adam Smith and Jonathan Ullman. <a href="https://dpcourse.github.io/2021-spring/index.html">DPCourse Lecture 4 & 5</a>
+					</ul>
+				</td>
+				<td>Jon</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 01-16-25</td>
+        <td>
+					<strong>Class 03: Differential Privacy</strong><br/>
+					<ul>
+					</ul>
+				</td>
+				<td>Jon</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 01-20-25</td>
+        <td>
+					<strong>No Meeting (MLK Day)</strong><br/>
+					<ul>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 01-23-25</td>
+        <td>
+					<strong>Class 04: TBD</strong><br/>
+					<ul>
+						<li>Begin student presentations
 					</ul>
 				</td>
 				<td>&mdash;</td>
