--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -78,10 +78,9 @@
       <tr>
         <td>Mon<br/> 01-13-25</td>
         <td>
-					<strong>Class 02: Membership Inference / Differential Privacy</strong><br/>
+					<strong>Class 02: Membership Inference</strong><br/>
 					<ul> 
-						<li>Nicholas Carlini, Steve Chien, Milad Nasr, Shuang Song, Andreas Terzis, Florian Tramer.  <a href="https://arxiv.org/abs/2112.03570">Membership Inference Attacks From First Principles</a>.  IEEE S&P 2022.
-						<li>Adam Smith and Jonathan Ullman. <a href="https://dpcourse.github.io/2021-spring/index.html">DPCourse Lecture 4 & 5</a>
+						<li>Nicholas Carlini, Steve Chien, Milad Nasr, Shuang Song, Andreas Terzis, Florian Tramer.  <a href="https://arxiv.org/abs/2112.03570">Membership Inference Attacks From First Principles</a>.  IEEE S&P 2022
 					</ul>
 				</td>
 				<td>Jon</td>
@@ -91,6 +90,7 @@
         <td>
 					<strong>Class 03: Differential Privacy</strong><br/>
 					<ul>
+						<li>Adam Smith and Jonathan Ullman. <a href="https://dpcourse.github.io/2021-spring/index.html">DPCourse Lecture 4 & 5</a>
 					</ul>
 				</td>
 				<td>Jon</td>
