--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -59,8 +59,8 @@
 						<li>Start Membership Inference
 						<li>No assigned reading (obviously), but presentation based on:
 							<ul>
-								<li>Sankararaman, Obozinski, Jordan, Halperin.  <a href="https://www.nature.com/articles/ng.436">Genomic Privacy and Limits of Individual Detection in a Pool</a>. Nature Genetics 2009
-								<li>Dwork, Smith, Steinke, Ullman, Vadhan.  <a href="https://ieeexplore.ieee.org/document/7354420">Robust Traceability from Trace Amounts</a>. FOCS 2015
+								<li>Sankararaman, Obozinski, Jordan, Halperin.  <a href="https://www.nature.com/articles/ng.436">Genomic Privacy and Limits of Individual Detection in a Pool</a>. Nature Genetics 2009</li>
+								<li>Dwork, Smith, Steinke, Ullman, Vadhan.  <a href="https://ieeexplore.ieee.org/document/7354420">Robust Traceability from Trace Amounts</a>. FOCS 2015</li>
 							</ul>
 					</ul>
 				</td>
@@ -69,7 +69,7 @@
       <tr>
         <td>Thu<br/> 01-09-25</td>
         <td>
-					<strong>No Meeting (Jon doing "field work")</strong><br/>
+					<strong>No Meeting</strong><br/>
 					<ul>
 					</ul>
 				</td>
@@ -80,7 +80,7 @@
         <td>
 					<strong>Class 02: Membership Inference</strong><br/>
 					<ul> 
-						<li>Nicholas Carlini, Steve Chien, Milad Nasr, Shuang Song, Andreas Terzis, Florian Tramer.  <a href="https://arxiv.org/abs/2112.03570">Membership Inference Attacks From First Principles</a>.  IEEE S&P 2022
+						<li>Carlini, Chien, Nasr, Song, Terzis, Tramer.  <a href="https://arxiv.org/abs/2112.03570">Membership Inference Attacks From First Principles.</a>  IEEE S&P 2022</li>
 					</ul>
 				</td>
 				<td>Jon</td>
@@ -88,9 +88,9 @@
       <tr>
         <td>Thu<br/> 01-16-25</td>
         <td>
-					<strong>Class 03: Differential Privacy</strong><br/>
+					<strong>Class 03: Differential Privacy I</strong><br/>
 					<ul>
-						<li>Adam Smith and Jonathan Ullman. <a href="https://dpcourse.github.io/2021-spring/index.html">DPCourse Lecture 4 & 5</a>
+						<li>Smith and Ullman. <a href="https://dpcourse.github.io/2021-spring/schedule.html">DPCourse Lecture 4 & 5</a>
 					</ul>
 				</td>
 				<td>Jon</td>
@@ -107,13 +107,35 @@
       <tr>
         <td>Thu<br/> 01-23-25</td>
         <td>
-					<strong>Class 04: TBD</strong><br/>
+					<strong>Class 04: DP Machine Learning and Optimization</strong><br/>
 					<ul>
-						<li>Begin student presentations
+						<li>Smith and Ullman. <a href="https://dpcourse.github.io/2021-spring/schedule.html">DPCourse Lecture 11 & 12</a></li>
+						<li>Abadi, Chu, Goodfellow, McMahan, Mironov, Talwar, Zhang.  <a href="https://arxiv.org/abs/1607.00133">Deep Learning with Differential Privacy.</a>  CCS 2016</li>
 					</ul>
 				</td>
-				<td>&mdash;</td>
+				<td>TBD</td>
       </tr>
+      <tr>
+        <td>Mon<br/> 01-27-25</td>
+        <td>
+					<strong>Class 05: Memorization and Data Extraction</strong><br/>
+					<ul>
+						<li>Brown, Bun, Feldman, Smith, Talwar. <a href="https://arxiv.org/abs/2012.06421">When is Memorization of Irrelevant Training Data Necessary for High-Accuracy Learning.</a>  STOC 2021</li>
+						<li>Carlini et al. <a href="https://arxiv.org/abs/2012.07805">Extracting Training Data from Large Language Models.</a>  USENIX 2021</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+<!--      <tr>
+        <td>Thu<br/> 01-30-25</td>
+        <td>
+					<strong>Class 06: Privacy in LLMs Beyond DP</strong><br/>
+					<ul>
+						<li>Mireshghallah et al. <a href="https://arxiv.org/abs/2310.17884">Can LLMs Keep a Secret? Testing Privacy Implications of Language Models via Contextual Integrity Theory.</a>  ICLR 2024</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>-->
       </table>
       
 </div>
