--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -53,15 +53,10 @@
       <tr>
         <td>Mon<br/> 01-06-25</td>
         <td>
-					<strong>Class 01: Intro / Membership Inference</strong><br/>
+					<strong>Class 01: Intro</strong><br/>
 					<ul>
 						<li>Welcome / Introduction
-						<li>Start Membership Inference
-						<li>No assigned reading (obviously), but presentation based on:
-							<ul>
-								<li>Sankararaman, Obozinski, Jordan, Halperin.  <a href="https://www.nature.com/articles/ng.436">Genomic Privacy and Limits of Individual Detection in a Pool</a>. Nature Genetics 2009</li>
-								<li>Dwork, Smith, Steinke, Ullman, Vadhan.  <a href="https://ieeexplore.ieee.org/document/7354420">Robust Traceability from Trace Amounts</a>. FOCS 2015</li>
-							</ul>
+						<li>Privacy Overview
 					</ul>
 				</td>
 				<td>Jon</td>
@@ -75,11 +70,14 @@
 				</td>
 				<td>&mdash;</td>
       </tr>
+
       <tr>
         <td>Mon<br/> 01-13-25</td>
         <td>
 					<strong>Class 02: Membership Inference</strong><br/>
 					<ul> 
+						<li>Sankararaman, Obozinski, Jordan, Halperin.  <a href="https://www.nature.com/articles/ng.436">Genomic Privacy and Limits of Individual Detection in a Pool</a>. Nature Genetics 2009</li>
+						<li>Dwork, Smith, Steinke, Ullman, Vadhan.  <a href="https://ieeexplore.ieee.org/document/7354420">Robust Traceability from Trace Amounts</a>. FOCS 2015</li>
 						<li>Carlini, Chien, Nasr, Song, Terzis, Tramer.  <a href="https://arxiv.org/abs/2112.03570">Membership Inference Attacks From First Principles.</a>  IEEE S&P 2022</li>
 					</ul>
 				</td>
@@ -88,7 +86,7 @@
       <tr>
         <td>Thu<br/> 01-16-25</td>
         <td>
-					<strong>Class 03: Differential Privacy I</strong><br/>
+					<strong>Class 03: Differential Privacy</strong><br/>
 					<ul>
 						<li>Smith and Ullman. <a href="https://dpcourse.github.io/2021-spring/schedule.html">DPCourse Lecture 4 & 5</a>
 					</ul>
@@ -107,7 +105,17 @@
       <tr>
         <td>Thu<br/> 01-23-25</td>
         <td>
-					<strong>Class 04: DP Machine Learning and Optimization</strong><br/>
+					<strong>Class 04: Differential Privacy Cont'd</strong><br/>
+					<ul>
+						<li>Smith and Ullman. <a href="https://dpcourse.github.io/2021-spring/schedule.html">DPCourse Lecture 4 & 5</a>
+					</ul>
+				</td>
+				<td>Jon</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 01-27-25</td>
+        <td>
+					<strong>Class 05: DP Machine Learning and Optimization</strong><br/>
 					<ul>
 						<li>Smith and Ullman. <a href="https://dpcourse.github.io/2021-spring/schedule.html">DPCourse Lecture 11 & 12</a></li>
 						<li>Abadi, Chu, Goodfellow, McMahan, Mironov, Talwar, Zhang.  <a href="https://arxiv.org/abs/1607.00133">Deep Learning with Differential Privacy.</a>  CCS 2016</li>
@@ -116,9 +124,9 @@
 				<td>TBD</td>
       </tr>
       <tr>
-        <td>Mon<br/> 01-27-25</td>
+        <td>Thu<br/> 01-30-25</td>
         <td>
-					<strong>Class 05: Memorization and Data Extraction</strong><br/>
+					<strong>Class 06: Memorization and Data Extraction</strong><br/>
 					<ul>
 						<li>Brown, Bun, Feldman, Smith, Talwar. <a href="https://arxiv.org/abs/2012.06421">When is Memorization of Irrelevant Training Data Necessary for High-Accuracy Learning.</a>  STOC 2021</li>
 						<li>Carlini et al. <a href="https://arxiv.org/abs/2012.07805">Extracting Training Data from Large Language Models.</a>  USENIX 2021</li>
@@ -126,18 +134,51 @@
 				</td>
 				<td>TBD</td>
       </tr>
-<!--      <tr>
-        <td>Thu<br/> 01-30-25</td>
+			<tr>
+				<td colspan=3><center><strong>Unit II &mdash; Fairness</strong></center></td>
+			</tr>
+      <tr>
+        <td>Mon<br/> 02-03-25</td>
         <td>
-					<strong>Class 06: Privacy in LLMs Beyond DP</strong><br/>
+					<strong>Class 07: Individual Fairness</strong><br/>
 					<ul>
-						<li>Mireshghallah et al. <a href="https://arxiv.org/abs/2310.17884">Can LLMs Keep a Secret? Testing Privacy Implications of Language Models via Contextual Integrity Theory.</a>  ICLR 2024</li>
+						<li>Dwork, Hardt, Pitassi, Reingold, Zemel.  <a href="https://arxiv.org/abs/1104.3913">Fairness Through Awareness.</a>  ITCS 2012</li>
 					</ul>
 				</td>
 				<td>TBD</td>
-      </tr>-->
-      </table>
-      
+      </tr>
+      <tr>
+        <td>Thu<br/> 02-06-25</td>
+        <td>
+					<strong>Class 08: Group and Multigroup Fairness</strong><br/>
+					<ul>
+						<li>Hardt, Price, Srebro.  <a href="https://arxiv.org/abs/1610.02413">Equality of Opportunity in Supervised Learning.</a> NeurIPS 2016</li>
+						<li>Kearns, Neel, Roth, Wu.  <a href="https://arxiv.org/abs/1711.05144">Preventing Fairness Gerrymandering: Auditing and Learning for Subgroup Fairness.</a>  ICML 2018</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 02-10-25</td>
+        <td>
+					<strong>Class 09: Causality and Fairness</strong><br/>
+					<ul>
+						<li>Kilbertus et al. <a href="https://arxiv.org/abs/1706.02744">Avoiding Discrimination Through Causal Reasoning.</a> NeurIPS 2017</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 02-13-25</td>
+        <td>
+					<strong>Class 10: Fairness Tradeoffs</strong><br/>
+					<ul>
+						<li>Kleinberg, Mullainathan, Raghavan. <a href="https://arxiv.org/abs/1609.05807">Inherent Trade-Offs in the Fair Determination of Risk Scores.</a> ITCS 2017</li>
+					</ul>
+				</td>
+				<td>TBD</td>
+      </tr>
+      </table> 
 </div>
 
    
