--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -121,7 +121,7 @@
 						<li>Abadi, Chu, Goodfellow, McMahan, Mironov, Talwar, Zhang.  <a href="https://arxiv.org/abs/1607.00133">Deep Learning with Differential Privacy.</a>  CCS 2016</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Hanna</td>
       </tr>
       <tr>
         <td>Thu<br/> 01-30-25</td>
@@ -132,7 +132,7 @@
 						<li>Carlini et al. <a href="https://arxiv.org/abs/2012.07805">Extracting Training Data from Large Language Models.</a>  USENIX 2021</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Tim & Mahdi</td>
       </tr>
 			<tr>
 				<td colspan=3><center><strong>Unit II &mdash; Fairness</strong></center></td>
@@ -145,7 +145,7 @@
 						<li>Dwork, Hardt, Pitassi, Reingold, Zemel.  <a href="https://arxiv.org/abs/1104.3913">Fairness Through Awareness.</a>  ITCS 2012</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Jack</td>
       </tr>
       <tr>
         <td>Thu<br/> 02-06-25</td>
@@ -156,7 +156,7 @@
 						<li>Kearns, Neel, Roth, Wu.  <a href="https://arxiv.org/abs/1711.05144">Preventing Fairness Gerrymandering: Auditing and Learning for Subgroup Fairness.</a>  ICML 2018</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Michael</td>
       </tr>
       <tr>
         <td>Mon<br/> 02-10-25</td>
@@ -166,7 +166,7 @@
 						<li>Kilbertus et al. <a href="https://arxiv.org/abs/1706.02744">Avoiding Discrimination Through Causal Reasoning.</a> NeurIPS 2017</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Jeffrey</td>
       </tr>
       <tr>
         <td>Thu<br/> 02-13-25</td>
@@ -176,7 +176,7 @@
 						<li>Kleinberg, Mullainathan, Raghavan. <a href="https://arxiv.org/abs/1609.05807">Inherent Trade-Offs in the Fair Determination of Risk Scores.</a> ITCS 2017</li>
 					</ul>
 				</td>
-				<td>TBD</td>
+				<td>Alenna</td>
       </tr>
       </table> 
 </div>
