--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<p>In Spring 2025 I am teaching a <a href="cs7880-s25/index.html">CS 7880: Seminar on Foundations of Trustworthy ML</a>.</p>
 	
 	<ul>
+		<li><span id="date">01-22-2025</span> Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> on her AISTATS <a href="https://arxiv.org/abs/2412.12374">paper</a>!
 		<li><span id="date">01-21-2025</span> I was <a href="https://www.census.gov/newsroom/press-releases/2024/new-members-csac.html">appointed</a> to the Census Scientific Advisory Committee (CSAC)!
 		<li><span id="date">12-18-2024</span> New <a href="https://arxiv.org/abs/2412.12374">paper</a> on private personalized learning!
 		<li><span id="date">12-10-2024</span> Our <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias-variance tradeoffs in DP was accepted to JASA&mdash;my first stats journal paper!
