--- a/research.html
+++ b/research.html
@@ -45,16 +45,6 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
-	<strong>Privacy in Metalearning and Multitask Learning: Modeling and Separations</strong>
-	<a href="https://arxiv.org/abs/2412.12374"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>,
-	<a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a>,
-	<a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>,
-	<a href="https://sites.google.com/bu.edu/marika/home">Marika Swanberg</a>, and
-	Jonathan Ullman
-</div>
-
-<div class="paper">
 	<strong>Instance-Optimal Differentially Private Estimation</strong>
 	<a href="https://arxiv.org/abs/2210.15819"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://audramarymcmillan.wixsite.com/mysite">Audra McMillan</a>,
@@ -65,6 +55,17 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>Privacy in Metalearning and Multitask Learning: Modeling and Separations</strong>
+	<a href="https://arxiv.org/abs/2412.12374"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://maryamaliakbarpour.com/">Maryam Aliakbarpour</a>,
+	<a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a>,
+	<a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>,
+	<a href="https://sites.google.com/bu.edu/marika/home">Marika Swanberg</a>, and
+	Jonathan Ullman</br>
+	International Conference on Artificial Intelligence and Statistics <strong>(AISTATS '25)</strong></br>
+</div>
 
 <div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
