--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -150,7 +150,14 @@
       <tr>
         <td>Thu<br/> 02-06-25</td>
         <td>
-					<strong>Class 08: Group and Multigroup Fairness</strong><br/>
+					<strong>Class 08: Catch Up Day</strong><br/>
+				</td>
+				<td>Jack</td>
+      </tr>
+      <tr>
+        <td>Mon<br/> 02-10-25</td>
+        <td>
+					<strong>Class 09: Group and Multigroup Fairness</strong><br/>
 					<ul>
 						<li>Hardt, Price, Srebro.  <a href="https://arxiv.org/abs/1610.02413">Equality of Opportunity in Supervised Learning.</a> NeurIPS 2016</li>
 						<li>Kearns, Neel, Roth, Wu.  <a href="https://arxiv.org/abs/1711.05144">Preventing Fairness Gerrymandering: Auditing and Learning for Subgroup Fairness.</a>  ICML 2018</li>
@@ -159,9 +166,9 @@
 				<td>Michael</td>
       </tr>
       <tr>
-        <td>Mon<br/> 02-10-25</td>
+        <td>Thu<br/> 02-13-25</td>
         <td>
-					<strong>Class 09: Causality and Fairness</strong><br/>
+					<strong>Class 10: Causality and Fairness</strong><br/>
 					<ul>
 						<li>Kilbertus et al. <a href="https://arxiv.org/abs/1706.02744">Avoiding Discrimination Through Causal Reasoning.</a> NeurIPS 2017</li>
 					</ul>
@@ -169,9 +176,9 @@
 				<td>Jeffrey</td>
       </tr>
       <tr>
-        <td>Thu<br/> 02-13-25</td>
+        <td>Mon<br/> 02-17-25</td>
         <td>
-					<strong>Class 10: Fairness Tradeoffs</strong><br/>
+					<strong>Class 11: Fairness Tradeoffs</strong><br/>
 					<ul>
 						<li>Kleinberg, Mullainathan, Raghavan. <a href="https://arxiv.org/abs/1609.05807">Inherent Trade-Offs in the Fair Determination of Risk Scores.</a> ITCS 2017</li>
 					</ul>
