--- a/cs7880-s25/schedule.html
+++ b/cs7880-s25/schedule.html
@@ -178,6 +178,15 @@
       <tr>
         <td>Mon<br/> 02-17-25</td>
         <td>
+					<strong>No Meeting (Presidents Day)</strong><br/>
+					<ul>
+					</ul>
+				</td>
+				<td>&mdash;</td>
+      </tr>
+      <tr>
+        <td>Thu<br/> 02-20-25</td>
+        <td>
 					<strong>Class 11: Fairness Tradeoffs</strong><br/>
 					<ul>
 						<li>Kleinberg, Mullainathan, Raghavan. <a href="https://arxiv.org/abs/1609.05807">Inherent Trade-Offs in the Fair Determination of Risk Scores.</a> ITCS 2017</li>
